--- a/simulation.ipynb
+++ b/simulation.ipynb
@@ -1,12 +1,176 @@
 {
  "cells": [
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-01T16:55:53.068640200Z",
+     "start_time": "2026-02-01T16:55:52.991950200Z"
+    }
+   },
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0f40c543",
-   "metadata": {},
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ],
+   "id": "6837f2b02e8dce31",
    "outputs": [],
-   "source": []
+   "execution_count": 1
+  },
+  {
+   "cell_type": "code",
+   "id": "0f40c543",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-01T16:55:58.298677100Z",
+     "start_time": "2026-02-01T16:55:54.278815700Z"
+    }
+   },
+   "source": [
+    "from __future__ import annotations\n",
+    "\n",
+    "import argparse\n",
+    "import csv\n",
+    "import json\n",
+    "import os\n",
+    "import time\n",
+    "from dataclasses import dataclass\n",
+    "from datetime import datetime\n",
+    "from pathlib import Path\n",
+    "from typing import Tuple\n",
+    "\n",
+    "import jax\n",
+    "import jax.numpy as jnp\n",
+    "import numpy as np\n",
+    "import optax\n",
+    "\n",
+    "# --- Project imports (assumed available in your package) ---\n",
+    "from diffwake.diffwake_jax.model import load_input, create_state\n",
+    "from diffwake.diffwake_jax.layout_runner import make_layout_runner\n",
+    "from diffwake.diffwake_jax.util import average_velocity_jax\n",
+    "from diffwake.diffwake_jax.turbine.operation_models import power as power_fn\n",
+    "from diffwake.diffwake_jax.simulator import simulate\n"
+   ],
+   "outputs": [],
+   "execution_count": 2
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-01T16:55:59.964387600Z",
+     "start_time": "2026-02-01T16:55:59.927087700Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "def power_loss_function(x,y, model, weights):\n",
+    "    model.set(\n",
+    "    layout_x=x,\n",
+    "    layout_y=y\n",
+    "    )\n",
+    "    model.run()\n",
+    "    power = model.get_turbine_powers()/1e6\n",
+    "    loss = -(power.mean(dim=1)*(weights.flatten())).sum()\n",
+    "    return loss"
+   ],
+   "id": "24b63dc896aa13fb",
+   "outputs": [],
+   "execution_count": 3
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-01T16:56:01.458270300Z",
+     "start_time": "2026-02-01T16:56:00.454644500Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# Turn this into a dataclass maybe\n",
+    "data_dir = Path(\"data/horn\")\n",
+    "\n",
+    "# load configs\n",
+    "cfg = load_input(\n",
+    "    data_dir / \"cc_hornsRev.yaml\",\n",
+    "    data_dir / \"vestas_v802MW.yaml\"\n",
+    ")\n",
+    "\n",
+    "# Create layout coordinates\n",
+    "layout_x = jnp.array([0.0, 500.0, 1000.0])\n",
+    "layout_y = jnp.array([0.0, 0.0, 0.0])\n",
+    "\n",
+    "# Define single flow condition: 8 m/s, 270 degrees, 6% turbulence intensity\n",
+    "wind_speed = jnp.array([9.6])\n",
+    "wind_dir = jnp.array([jnp.deg2rad(270.0)])\n",
+    "ti = jnp.array([0.06])\n",
+    "\n",
+    "# Update configuration\n",
+    "cfg = cfg.set(\n",
+    "    layout_x=layout_x,\n",
+    "    layout_y=layout_y,\n",
+    "    wind_speeds=wind_speed,\n",
+    "    wind_directions=wind_dir,\n",
+    "    turbulence_intensities=ti\n",
+    ")\n",
+    "\n",
+    "# Create the simulation state\n",
+    "state = create_state(cfg)"
+   ],
+   "id": "476bf48af3f5bfde",
+   "outputs": [],
+   "execution_count": 4
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-01T16:56:03.068317100Z",
+     "start_time": "2026-02-01T16:56:02.159944Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "result = simulate(state)",
+   "id": "219fb2c523cd54dc",
+   "outputs": [],
+   "execution_count": 5
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-01T16:57:03.113671900Z",
+     "start_time": "2026-02-01T16:57:02.503896200Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "powers = power_fn(\n",
+    "    power_thrust_table=state.farm.power_thrust_table,\n",
+    "    velocities=result.u_sorted,\n",
+    "    air_density=state.flow.air_density,\n",
+    "    yaw_angles=state.farm.yaw_angles_sorted\n",
+    ")\n",
+    "\n",
+    "print(f\"Turbine powers (W): {powers}\")\n",
+    "print(f\"Total farm power (MW): {jnp.sum(powers) / 1e6}\")\n"
+   ],
+   "id": "fe30001ed12f195a",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Turbine powers (W): [[1195849.6   349314.28  358707.28]]\n",
+      "Total farm power (MW): 1.9038711786270142\n"
+     ]
+    }
+   ],
+   "execution_count": 6
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "2e4b9e231c5cfc43"
   }
  ],
  "metadata": {
