gch wake model support

--- a/simulation.ipynb
+++ b/simulation.ipynb
@@ -81,8 +81,7 @@
    "source": [
     "data_dir = Path(\"data/horn\")\n",
     "# Create layout coordinates\n",
-    "layout_x = jnp.array([0.0, 500.0, 1000.0])\n",
-    "layout_y = jnp.array([0.0, 0.0, 0.0])\n",
+    "\n",
     "\n",
     "# Define single flow condition: 8 m/s, 270 degrees, 6% turbulence intensity\n",
     "wind_speed = jnp.array([9.6])\n",
@@ -93,8 +92,6 @@
     "    farm_path=data_dir / \"cc_hornsRev.yaml\",\n",
     "    generator_path=data_dir / \"vestas_v802MW.yaml\"\n",
     ").set(\n",
-    "    layout_x=layout_x,\n",
-    "    layout_y=layout_y,\n",
     "    wind_speeds=wind_speed,\n",
     "    wind_directions=wind_dir,\n",
     "    turbulence_intensities=ti\n",
@@ -104,8 +101,7 @@
     "    farm_path=data_dir / \"gauss_hornsRev.yaml\",\n",
     "    generator_path=data_dir / \"vestas_v802MW.yaml\"\n",
     ").set(\n",
-    "    layout_x=layout_x,\n",
-    "    layout_y=layout_y,\n",
+    "\n",
     "    wind_speeds=wind_speed,\n",
     "    wind_directions=wind_dir,\n",
     "    turbulence_intensities=ti\n",
@@ -303,15 +299,15 @@
     "\n",
     "# Define an inflow that\n",
     "# keeps wind speed and TI constant while sweeping the wind directions\n",
-    "wind_directions = np.array([270.0])\n",
+    "wind_directions = np.arange(0.0, 360.0, 1.0)\n",
     "\n",
     "time_series = TimeSeries(\n",
     "    wind_directions=wind_directions,\n",
-    "    wind_speeds=np.array([9.6]),\n",
+    "    wind_speeds=np.array([10.5]),\n",
     "    turbulence_intensities=0.06,\n",
     ")\n",
     "\n",
-    "N_turbines = [i for i in range(start, stop + 1)]\n",
+    "N_turbines = [N_turbines]\n",
     "\n",
     "floris_powers = []\n",
     "turbine_powers = []\n",
@@ -514,6 +510,75 @@
     }
    ],
    "execution_count": 27
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-06T14:32:08.397442200Z",
+     "start_time": "2026-02-06T14:32:08.388627Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# Test how to check for class objects\n",
+    "class Drink:\n",
+    "    def __init__(self, drink: str = 'Water'):\n",
+    "        self.drink = drink\n",
+    "\n",
+    "    def get_drink(self):\n",
+    "        return self.drink"
+   ],
+   "id": "d436f0d67b9eb712",
+   "outputs": [],
+   "execution_count": 2
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-06T14:32:21.192503200Z",
+     "start_time": "2026-02-06T14:32:21.174431200Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "myDrink = Drink(\"orange juice\")\n",
+    "print(f\"{myDrink} is of type {type(myDrink)}\")"
+   ],
+   "id": "f382ccdd10c8d619",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<__main__.Drink object at 0x0000022C091EEC90> is of type <class '__main__.Drink'>\n"
+     ]
+    }
+   ],
+   "execution_count": 4
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-06T14:32:42.094806500Z",
+     "start_time": "2026-02-06T14:32:42.065356Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "myDrink",
+   "id": "3392242d0f04f05b",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.Drink at 0x22c091eec90>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 5
   }
  ],
  "metadata": {
