--- a/simulation.ipynb
+++ b/simulation.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-05T13:36:16.499515800Z",
-     "start_time": "2026-02-05T13:36:16.276980300Z"
+     "end_time": "2026-02-06T22:16:07.243503300Z",
+     "start_time": "2026-02-06T22:16:07.027004600Z"
     }
    },
    "cell_type": "code",
@@ -13,25 +13,16 @@
     "%autoreload 2"
    ],
    "id": "6837f2b02e8dce31",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
-   "execution_count": 69
+   "outputs": [],
+   "execution_count": 1
   },
   {
    "cell_type": "code",
    "id": "0f40c543",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-05T13:37:21.964337200Z",
-     "start_time": "2026-02-05T13:37:21.955859500Z"
+     "end_time": "2026-02-06T22:18:51.976821500Z",
+     "start_time": "2026-02-06T22:18:51.798290100Z"
     }
    },
    "source": [
@@ -45,10 +36,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "plt.style.use('default')\n",
-    "from dataclasses import dataclass\n",
-    "from datetime import datetime\n",
     "from pathlib import Path\n",
-    "from typing import Tuple\n",
     "import sys\n",
     "sys.path.append(os.path.abspath('..'))\n",
     "\n",
@@ -57,24 +45,31 @@
     "import numpy as np\n",
     "import optax\n",
     "\n",
-    "from diffwake.diffwake_jax.model import load_input, create_state\n",
-    "from diffwake.diffwake_jax import model\n",
-    "from diffwake.diffwake_jax.layout_runner import make_layout_runner\n",
-    "from diffwake.diffwake_jax.util import average_velocity_jax\n",
+    "# from diffwake.diffwake_jax.model import load_input, create_state\n",
+    "# from diffwake.diffwake_jax import model\n",
+    "# from diffwake.diffwake_jax.layout_runner import make_layout_runner\n",
+    "# from diffwake.diffwake_jax.util import average_velocity_jax\n",
+    "# from diffwake.diffwake_jax.turbine.operation_models import power as power_fn\n",
+    "# from diffwake.diffwake_jax.simulator import simulate\n",
+    "\n",
+    "from diffwake.diffwake_jax.model_agnostic import load_input, create_state\n",
+    "from diffwake.diffwake_jax import model_agnostic\n",
+    "from diffwake.diffwake_jax.util_agnostic import average_velocity_jax\n",
     "from diffwake.diffwake_jax.turbine.operation_models import power as power_fn\n",
-    "from diffwake.diffwake_jax.simulator import simulate\n",
+    "from diffwake.diffwake_jax.sim_agnostic import simulate_simp\n",
+    "\n",
     "\n",
     "def absolute_percentage_difference(a, b):\n",
     "    return jnp.abs((a - b) / b) * 100\n"
    ],
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 12
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-05T13:37:58.305262600Z",
-     "start_time": "2026-02-05T13:37:57.409920100Z"
+     "end_time": "2026-02-06T22:18:54.869616300Z",
+     "start_time": "2026-02-06T22:18:52.180818700Z"
     }
    },
    "cell_type": "code",
@@ -114,8 +109,10 @@
     "cc_wake = cc_state.wake\n",
     "gch_wake = gch_state.wake\n",
     "\n",
+    "result = simulate_simp(gch_state)\n",
+    "\n",
     "# function testing of WakeModelManager\n",
-    "gch_wake.deflection_function()\n",
+    "\n",
     "\n",
     "# print(cc_wake.wake.velocity_model)\n",
     "# print(gch_wake.wake.velocity_model)\n",
@@ -140,17 +137,21 @@
    "id": "476bf48af3f5bfde",
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "GaussVelocityDeflection(ad=0.0, bd=0.0, alpha=0.58, beta=0.077, ka=0.38, kb=0.004, dm=1.0, eps_gain=0.2, use_secondary_steering=True, _sqrt2=1.4142135623730951)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TypeError",
+     "evalue": "GaussVelocityDeficit.__call__() got an unexpected keyword argument 'u_inital'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
+      "\u001B[31mTypeError\u001B[39m                                 Traceback (most recent call last)",
+      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[13]\u001B[39m\u001B[32m, line 36\u001B[39m\n\u001B[32m     33\u001B[39m cc_wake = cc_state.wake\n\u001B[32m     34\u001B[39m gch_wake = gch_state.wake\n\u001B[32m---> \u001B[39m\u001B[32m36\u001B[39m result = \u001B[43msimulate_simp\u001B[49m\u001B[43m(\u001B[49m\u001B[43mgch_state\u001B[49m\u001B[43m)\u001B[49m\n\u001B[32m     38\u001B[39m \u001B[38;5;66;03m# function testing of WakeModelManager\u001B[39;00m\n\u001B[32m     39\u001B[39m \n\u001B[32m     40\u001B[39m \n\u001B[32m   (...)\u001B[39m\u001B[32m     58\u001B[39m \u001B[38;5;66;03m# print(f\"Turbine powers (W): {powers}\")\u001B[39;00m\n\u001B[32m     59\u001B[39m \u001B[38;5;66;03m# print(f\"Total farm power (MW): {jnp.sum(powers) / 1e6}\")\u001B[39;00m\n",
+      "\u001B[36mFile \u001B[39m\u001B[32mE:\\Aeronautics\\fyp\\DiffWake\\diffwake\\diffwake_jax\\sim_agnostic.py:9\u001B[39m, in \u001B[36msimulate_simp\u001B[39m\u001B[34m(state)\u001B[39m\n\u001B[32m      5\u001B[39m \u001B[38;5;28;01mfrom\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01mjax\u001B[39;00m\u001B[38;5;250m         \u001B[39m\u001B[38;5;28;01mimport\u001B[39;00m lax, jit\n\u001B[32m      7\u001B[39m \u001B[38;5;28;01mimport\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01mjax\u001B[39;00m\u001B[34;01m.\u001B[39;00m\u001B[34;01mnumpy\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mas\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01mjnp\u001B[39;00m\n\u001B[32m----> \u001B[39m\u001B[32m9\u001B[39m \u001B[38;5;28;01mfrom\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01m.\u001B[39;00m\u001B[34;01mutil_agnostic\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mimport\u001B[39;00m (init_dynamic_state, Params, DynamicState,Result, State,get_axial_induction_fn, get_thrust_fn, make_params, to_result,make_constants\n\u001B[32m     10\u001B[39m \n\u001B[32m     11\u001B[39m )\n\u001B[32m     12\u001B[39m \u001B[38;5;28;01mfrom\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01m.\u001B[39;00m\u001B[34;01msolver\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mimport\u001B[39;00m cc_solver_step\n\u001B[32m     13\u001B[39m \u001B[38;5;28;01mfrom\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01m.\u001B[39;00m\u001B[34;01msolver_agnostic\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mimport\u001B[39;00m sequential_solve_step, turbopark_solver, empirical_gauss_solver\n",
+      "\u001B[36mFile \u001B[39m\u001B[32mE:\\Aeronautics\\fyp\\DiffWake\\diffwake\\diffwake_jax\\sim_agnostic.py:6\u001B[39m, in \u001B[36m_simulate\u001B[39m\u001B[34m(T, params, thrust_function, axial_induction_func, velocity_model, velocity_model_name, deflection_model, turbulence_model, combination_model, yaw_angles, tilt_angles, const, state, enable_secondary_steering, enable_transverse_velocities, enable_yaw_added_recovery)\u001B[39m\n\u001B[32m      0\u001B[39m <Error retrieving source code with stack_data see ipython/ipython#13598>\n",
+      "\u001B[36mFile \u001B[39m\u001B[32mE:\\Aeronautics\\fyp\\DiffWake\\diffwake\\diffwake_jax\\solver_agnostic.py:168\u001B[39m, in \u001B[36msequential_solve_step\u001B[39m\u001B[34m(state, ii, params, thrust_function, axial_induction_func, velocity_model, deflection_model, turbulence_model, combination_model, yaw_angles, tilt_angles, enable_secondary_steering, enable_transverse_velocities, enable_yaw_added_recovery, x_coord, y_coord, z_coord, x_c, y_c, z_c, u_init, dudz_init, ambient_ti)\u001B[39m\n\u001B[32m    165\u001B[39m     ti_i = updated\n\u001B[32m    167\u001B[39m \u001B[38;5;66;03m# Calculate the velocity deficit and combine it with the wake field\u001B[39;00m\n\u001B[32m--> \u001B[39m\u001B[32m168\u001B[39m velocity_deficit = \u001B[43mvelocity_model\u001B[49m\u001B[43m(\u001B[49m\n\u001B[32m    169\u001B[39m \u001B[43m    \u001B[49m\u001B[43mx_i\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43my_i\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mz_i\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m    170\u001B[39m \u001B[43m    \u001B[49m\u001B[43maxial_i\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m    171\u001B[39m \u001B[43m    \u001B[49m\u001B[43mdef_field\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m    172\u001B[39m \u001B[43m    \u001B[49m\u001B[43myaw_i_expanded\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m    173\u001B[39m \u001B[43m    \u001B[49m\u001B[43mti_i\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m    174\u001B[39m \u001B[43m    \u001B[49m\u001B[43mturb_Cts_i\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m    175\u001B[39m \u001B[43m    \u001B[49m\u001B[43mparams\u001B[49m\u001B[43m.\u001B[49m\u001B[43mhub_height\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m    176\u001B[39m \u001B[43m    \u001B[49m\u001B[43mparams\u001B[49m\u001B[43m.\u001B[49m\u001B[43mrotor_diameter\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m    177\u001B[39m \u001B[43m    \u001B[49m\u001B[43mx\u001B[49m\u001B[43m=\u001B[49m\u001B[43mx_coord\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m    178\u001B[39m \u001B[43m    \u001B[49m\u001B[43my\u001B[49m\u001B[43m=\u001B[49m\u001B[43my_coord\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m    179\u001B[39m \u001B[43m    \u001B[49m\u001B[43mz\u001B[49m\u001B[43m=\u001B[49m\u001B[43mz_coord\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m    180\u001B[39m \u001B[43m    \u001B[49m\u001B[43mu_inital\u001B[49m\u001B[43m=\u001B[49m\u001B[43mu_init\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m    181\u001B[39m \u001B[43m    \u001B[49m\u001B[43mwind_veer\u001B[49m\u001B[43m=\u001B[49m\u001B[43mparams\u001B[49m\u001B[43m.\u001B[49m\u001B[43mwind_veer\u001B[49m\n\u001B[32m    182\u001B[39m \u001B[43m\u001B[49m\u001B[43m)\u001B[49m\n\u001B[32m    184\u001B[39m \u001B[38;5;66;03m# Accumulate the wake field\u001B[39;00m\n\u001B[32m    185\u001B[39m \u001B[38;5;66;03m# In GCH/sequential solver, we combine the NEW deficit into the EXISTING wake field\u001B[39;00m\n\u001B[32m    186\u001B[39m wake_field = combination_model(\n\u001B[32m    187\u001B[39m     turb_u_wake,\n\u001B[32m    188\u001B[39m     velocity_deficit * u_init,\n\u001B[32m    189\u001B[39m )\n",
+      "\u001B[31mTypeError\u001B[39m: GaussVelocityDeficit.__call__() got an unexpected keyword argument 'u_inital'"
+     ]
     }
    ],
-   "execution_count": 5
+   "execution_count": 13
   },
   {
    "metadata": {},
