--- a/simulation.ipynb
+++ b/simulation.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-06T22:16:07.243503300Z",
-     "start_time": "2026-02-06T22:16:07.027004600Z"
+     "end_time": "2026-02-09T10:51:43.650567500Z",
+     "start_time": "2026-02-09T10:51:41.687690800Z"
     }
    },
    "cell_type": "code",
@@ -21,8 +21,8 @@
    "id": "0f40c543",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-06T22:18:51.976821500Z",
-     "start_time": "2026-02-06T22:18:51.798290100Z"
+     "end_time": "2026-02-09T12:14:52.219851Z",
+     "start_time": "2026-02-09T12:14:52.034593700Z"
     }
    },
    "source": [
@@ -52,6 +52,8 @@
     "# from diffwake.diffwake_jax.turbine.operation_models import power as power_fn\n",
     "# from diffwake.diffwake_jax.simulator import simulate\n",
     "\n",
+    "\n",
+    "# Wake model-agnostic edits to DiffWake\n",
     "from diffwake.diffwake_jax.model_agnostic import load_input, create_state\n",
     "from diffwake.diffwake_jax import model_agnostic\n",
     "from diffwake.diffwake_jax.util_agnostic import average_velocity_jax\n",
@@ -63,30 +65,34 @@
     "    return jnp.abs((a - b) / b) * 100\n"
    ],
    "outputs": [],
-   "execution_count": 12
+   "execution_count": 26
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-06T22:18:54.869616300Z",
-     "start_time": "2026-02-06T22:18:52.180818700Z"
+     "end_time": "2026-02-09T12:14:52.635654500Z",
+     "start_time": "2026-02-09T12:14:52.340893600Z"
     }
    },
    "cell_type": "code",
    "source": [
     "data_dir = Path(\"data/horn\")\n",
     "# Create layout coordinates\n",
-    "\n",
+    "layout_x = jnp.array([0.0, 500.0, 1000.0])\n",
+    "layout_y = jnp.array([0.0, 0.0, 0.0])\n",
     "\n",
     "# Define single flow condition: 8 m/s, 270 degrees, 6% turbulence intensity\n",
     "wind_speed = jnp.array([9.6])\n",
     "wind_dir = jnp.array([jnp.deg2rad(270.0)])\n",
     "ti = jnp.array([0.06])\n",
     "# Load farm & turbine configs, override wind conditions\n",
+    "\n",
     "cfg = load_input(\n",
     "    farm_path=data_dir / \"cc_hornsRev.yaml\",\n",
     "    generator_path=data_dir / \"vestas_v802MW.yaml\"\n",
     ").set(\n",
+    "    layout_x=layout_x,\n",
+    "    layout_y=layout_y,\n",
     "    wind_speeds=wind_speed,\n",
     "    wind_directions=wind_dir,\n",
     "    turbulence_intensities=ti\n",
@@ -96,7 +102,8 @@
     "    farm_path=data_dir / \"gauss_hornsRev.yaml\",\n",
     "    generator_path=data_dir / \"vestas_v802MW.yaml\"\n",
     ").set(\n",
-    "\n",
+    "    layout_x=layout_x,\n",
+    "    layout_y=layout_y,\n",
     "    wind_speeds=wind_speed,\n",
     "    wind_directions=wind_dir,\n",
     "    turbulence_intensities=ti\n",
@@ -109,7 +116,8 @@
     "cc_wake = cc_state.wake\n",
     "gch_wake = gch_state.wake\n",
     "\n",
-    "result = simulate_simp(gch_state)\n",
+    "gch_result = simulate_simp(gch_state)\n",
+    "cc_result = simulate_simp(cc_state)\n",
     "\n",
     "# function testing of WakeModelManager\n",
     "\n",
@@ -123,35 +131,63 @@
     "#\n",
     "# # Create the simulation state\n",
     "# state = create_state(cfg)\n",
-    "# result = simulate(state)\n",
-    "# powers = power_fn(\n",
-    "#     power_thrust_table=state.farm.power_thrust_table,\n",
-    "#     velocities=result.u_sorted,\n",
-    "#     air_density=state.flow.air_density,\n",
-    "#     yaw_angles=state.farm.yaw_angles_sorted\n",
-    "# )\n",
-    "#\n",
-    "# print(f\"Turbine powers (W): {powers}\")\n",
-    "# print(f\"Total farm power (MW): {jnp.sum(powers) / 1e6}\")\n"
+    "# result = simulate(state)"
    ],
    "id": "476bf48af3f5bfde",
+   "outputs": [],
+   "execution_count": 27
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-09T12:14:53.523585700Z",
+     "start_time": "2026-02-09T12:14:53.328385100Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "gch_powers = power_fn(\n",
+    "    power_thrust_table=gch_state.farm.power_thrust_table,\n",
+    "    velocities=gch_result.u_sorted,\n",
+    "    air_density=gch_state.flow.air_density,\n",
+    "    yaw_angles=gch_state.farm.yaw_angles_sorted\n",
+    ")\n",
+    "\n",
+    "cc_powers = power_fn(\n",
+    "    power_thrust_table=cc_state.farm.power_thrust_table,\n",
+    "    velocities=cc_result.u_sorted,\n",
+    "    air_density=cc_state.flow.air_density,\n",
+    "    yaw_angles=cc_state.farm.yaw_angles_sorted\n",
+    ")\n",
+    "\n",
+    "print(f\"Turbine powers (W): {gch_powers}\")\n",
+    "print(f\"Total farm power (MW): {jnp.sum(gch_powers) / 1e6}\")\n",
+    "print(f\"\\nTurbine powers with Cumulative-Curl (W): {cc_powers}\")\n",
+    "print(f\"Total farm power (MW): {jnp.sum(cc_powers) / 1e6}\")\n"
+   ],
+   "id": "5a7f8970b9c65642",
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "GaussVelocityDeficit.__call__() got an unexpected keyword argument 'u_inital'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
-      "\u001B[31mTypeError\u001B[39m                                 Traceback (most recent call last)",
-      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[13]\u001B[39m\u001B[32m, line 36\u001B[39m\n\u001B[32m     33\u001B[39m cc_wake = cc_state.wake\n\u001B[32m     34\u001B[39m gch_wake = gch_state.wake\n\u001B[32m---> \u001B[39m\u001B[32m36\u001B[39m result = \u001B[43msimulate_simp\u001B[49m\u001B[43m(\u001B[49m\u001B[43mgch_state\u001B[49m\u001B[43m)\u001B[49m\n\u001B[32m     38\u001B[39m \u001B[38;5;66;03m# function testing of WakeModelManager\u001B[39;00m\n\u001B[32m     39\u001B[39m \n\u001B[32m     40\u001B[39m \n\u001B[32m   (...)\u001B[39m\u001B[32m     58\u001B[39m \u001B[38;5;66;03m# print(f\"Turbine powers (W): {powers}\")\u001B[39;00m\n\u001B[32m     59\u001B[39m \u001B[38;5;66;03m# print(f\"Total farm power (MW): {jnp.sum(powers) / 1e6}\")\u001B[39;00m\n",
-      "\u001B[36mFile \u001B[39m\u001B[32mE:\\Aeronautics\\fyp\\DiffWake\\diffwake\\diffwake_jax\\sim_agnostic.py:9\u001B[39m, in \u001B[36msimulate_simp\u001B[39m\u001B[34m(state)\u001B[39m\n\u001B[32m      5\u001B[39m \u001B[38;5;28;01mfrom\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01mjax\u001B[39;00m\u001B[38;5;250m         \u001B[39m\u001B[38;5;28;01mimport\u001B[39;00m lax, jit\n\u001B[32m      7\u001B[39m \u001B[38;5;28;01mimport\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01mjax\u001B[39;00m\u001B[34;01m.\u001B[39;00m\u001B[34;01mnumpy\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mas\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01mjnp\u001B[39;00m\n\u001B[32m----> \u001B[39m\u001B[32m9\u001B[39m \u001B[38;5;28;01mfrom\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01m.\u001B[39;00m\u001B[34;01mutil_agnostic\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mimport\u001B[39;00m (init_dynamic_state, Params, DynamicState,Result, State,get_axial_induction_fn, get_thrust_fn, make_params, to_result,make_constants\n\u001B[32m     10\u001B[39m \n\u001B[32m     11\u001B[39m )\n\u001B[32m     12\u001B[39m \u001B[38;5;28;01mfrom\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01m.\u001B[39;00m\u001B[34;01msolver\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mimport\u001B[39;00m cc_solver_step\n\u001B[32m     13\u001B[39m \u001B[38;5;28;01mfrom\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01m.\u001B[39;00m\u001B[34;01msolver_agnostic\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mimport\u001B[39;00m sequential_solve_step, turbopark_solver, empirical_gauss_solver\n",
-      "\u001B[36mFile \u001B[39m\u001B[32mE:\\Aeronautics\\fyp\\DiffWake\\diffwake\\diffwake_jax\\sim_agnostic.py:6\u001B[39m, in \u001B[36m_simulate\u001B[39m\u001B[34m(T, params, thrust_function, axial_induction_func, velocity_model, velocity_model_name, deflection_model, turbulence_model, combination_model, yaw_angles, tilt_angles, const, state, enable_secondary_steering, enable_transverse_velocities, enable_yaw_added_recovery)\u001B[39m\n\u001B[32m      0\u001B[39m <Error retrieving source code with stack_data see ipython/ipython#13598>\n",
-      "\u001B[36mFile \u001B[39m\u001B[32mE:\\Aeronautics\\fyp\\DiffWake\\diffwake\\diffwake_jax\\solver_agnostic.py:168\u001B[39m, in \u001B[36msequential_solve_step\u001B[39m\u001B[34m(state, ii, params, thrust_function, axial_induction_func, velocity_model, deflection_model, turbulence_model, combination_model, yaw_angles, tilt_angles, enable_secondary_steering, enable_transverse_velocities, enable_yaw_added_recovery, x_coord, y_coord, z_coord, x_c, y_c, z_c, u_init, dudz_init, ambient_ti)\u001B[39m\n\u001B[32m    165\u001B[39m     ti_i = updated\n\u001B[32m    167\u001B[39m \u001B[38;5;66;03m# Calculate the velocity deficit and combine it with the wake field\u001B[39;00m\n\u001B[32m--> \u001B[39m\u001B[32m168\u001B[39m velocity_deficit = \u001B[43mvelocity_model\u001B[49m\u001B[43m(\u001B[49m\n\u001B[32m    169\u001B[39m \u001B[43m    \u001B[49m\u001B[43mx_i\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43my_i\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mz_i\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m    170\u001B[39m \u001B[43m    \u001B[49m\u001B[43maxial_i\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m    171\u001B[39m \u001B[43m    \u001B[49m\u001B[43mdef_field\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m    172\u001B[39m \u001B[43m    \u001B[49m\u001B[43myaw_i_expanded\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m    173\u001B[39m \u001B[43m    \u001B[49m\u001B[43mti_i\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m    174\u001B[39m \u001B[43m    \u001B[49m\u001B[43mturb_Cts_i\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m    175\u001B[39m \u001B[43m    \u001B[49m\u001B[43mparams\u001B[49m\u001B[43m.\u001B[49m\u001B[43mhub_height\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m    176\u001B[39m \u001B[43m    \u001B[49m\u001B[43mparams\u001B[49m\u001B[43m.\u001B[49m\u001B[43mrotor_diameter\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m    177\u001B[39m \u001B[43m    \u001B[49m\u001B[43mx\u001B[49m\u001B[43m=\u001B[49m\u001B[43mx_coord\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m    178\u001B[39m \u001B[43m    \u001B[49m\u001B[43my\u001B[49m\u001B[43m=\u001B[49m\u001B[43my_coord\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m    179\u001B[39m \u001B[43m    \u001B[49m\u001B[43mz\u001B[49m\u001B[43m=\u001B[49m\u001B[43mz_coord\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m    180\u001B[39m \u001B[43m    \u001B[49m\u001B[43mu_inital\u001B[49m\u001B[43m=\u001B[49m\u001B[43mu_init\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m    181\u001B[39m \u001B[43m    \u001B[49m\u001B[43mwind_veer\u001B[49m\u001B[43m=\u001B[49m\u001B[43mparams\u001B[49m\u001B[43m.\u001B[49m\u001B[43mwind_veer\u001B[49m\n\u001B[32m    182\u001B[39m \u001B[43m\u001B[49m\u001B[43m)\u001B[49m\n\u001B[32m    184\u001B[39m \u001B[38;5;66;03m# Accumulate the wake field\u001B[39;00m\n\u001B[32m    185\u001B[39m \u001B[38;5;66;03m# In GCH/sequential solver, we combine the NEW deficit into the EXISTING wake field\u001B[39;00m\n\u001B[32m    186\u001B[39m wake_field = combination_model(\n\u001B[32m    187\u001B[39m     turb_u_wake,\n\u001B[32m    188\u001B[39m     velocity_deficit * u_init,\n\u001B[32m    189\u001B[39m )\n",
-      "\u001B[31mTypeError\u001B[39m: GaussVelocityDeficit.__call__() got an unexpected keyword argument 'u_inital'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Turbine velocities:  [[[[9.220105  9.6       9.893925 ]\n",
+      "   [9.220105  9.6       9.893925 ]\n",
+      "   [9.220105  9.6       9.893925 ]]\n",
+      "\n",
+      "  [[6.79976   6.5346336 7.2966967]\n",
+      "   [6.2760468 5.8713527 6.73471  ]\n",
+      "   [6.7997665 6.534643  7.2967043]]\n",
+      "\n",
+      "  [[7.5103135 7.650365  8.059179 ]\n",
+      "   [7.350485  7.467864  7.8876696]\n",
+      "   [7.5156116 7.656311  8.064864 ]]]]\n",
+      "Turbine powers (W): [[1.1958496e+06 4.0836828e+05 6.2346750e+05]]\n",
+      "Total farm power (MW): 2.2276854515075684\n"
      ]
     }
    ],
-   "execution_count": 13
+   "execution_count": 28
   },
   {
    "metadata": {},
