ignore scan for now

--- a/simulation.ipynb
+++ b/simulation.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-10T10:35:08.353307300Z",
-     "start_time": "2026-02-10T10:35:06.428850900Z"
+     "end_time": "2026-02-10T14:20:53.597474300Z",
+     "start_time": "2026-02-10T14:20:53.144549100Z"
     }
    },
    "cell_type": "code",
@@ -21,8 +21,8 @@
    "id": "0f40c543",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-10T12:51:11.543693600Z",
-     "start_time": "2026-02-10T12:51:11.321408300Z"
+     "end_time": "2026-02-10T14:51:23.571431500Z",
+     "start_time": "2026-02-10T14:51:23.423750100Z"
     }
    },
    "source": [
@@ -79,13 +79,13 @@
     "    return x\n"
    ],
    "outputs": [],
-   "execution_count": 123
+   "execution_count": 15
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-10T12:42:55.542730200Z",
-     "start_time": "2026-02-10T12:42:55.352219400Z"
+     "end_time": "2026-02-10T14:21:05.836729Z",
+     "start_time": "2026-02-10T14:21:05.684845400Z"
     }
    },
    "cell_type": "code",
@@ -187,13 +187,13 @@
    ],
    "id": "65f79b960202888e",
    "outputs": [],
-   "execution_count": 105
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-10T12:42:56.822924Z",
-     "start_time": "2026-02-10T12:42:56.553297900Z"
+     "end_time": "2026-02-10T14:21:15.154946500Z",
+     "start_time": "2026-02-10T14:21:07.875228900Z"
     }
    },
    "cell_type": "code",
@@ -244,7 +244,7 @@
    ],
    "id": "476bf48af3f5bfde",
    "outputs": [],
-   "execution_count": 106
+   "execution_count": 4
   },
   {
    "metadata": {},
@@ -255,38 +255,39 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-10T12:42:58.242105700Z",
-     "start_time": "2026-02-10T12:42:57.462834300Z"
+     "end_time": "2026-02-10T14:47:19.119107100Z",
+     "start_time": "2026-02-10T14:47:18.985959700Z"
     }
    },
    "cell_type": "code",
    "source": [
     "# Horns Rev 1 simulation\n",
-    "fmodel = FlorisModel(r\"E:\\Aeronautics\\fyp\\floris\\examples\\inputs\\cc_vesta.yaml\")\n",
-    "fmodel_gch = FlorisModel(r\"E:\\Aeronautics\\fyp\\floris\\examples\\inputs\\gauss_vesta.yaml\")\n",
-    "\n",
-    "time_series = TimeSeries(\n",
-    "    wind_directions=np.array([270.0]),\n",
-    "    wind_speeds=np.array([13.5]),\n",
-    "    turbulence_intensities=0.06,\n",
-    ")\n",
-    "\n",
-    "fmodel.set(wind_data=time_series)\n",
-    "cc_start_time = time.time()\n",
-    "fmodel.run()\n",
-    "cc_end_time = time.time()\n",
-    "\n",
-    "\n",
-    "fmodel_gch.set(wind_data=time_series)\n",
-    "gch_start_time = time.time()\n",
-    "fmodel_gch.run()\n",
-    "gch_end_time = time.time()\n",
-    "\n",
-    "\n",
-    "gch_farm_power_floris = fmodel_gch.get_farm_power() / 1e6\n",
-    "gch_turbine_powers_floris = fmodel_gch.get_turbine_powers()\n",
-    "cc_farm_power_floris = fmodel.get_farm_power() / 1e6\n",
-    "cc_turbine_powers_floris = fmodel.get_turbine_powers()\n",
+    "# fmodel = FlorisModel(r\"..\\floris\\examples\\inputs\\cc_vesta.yaml\")\n",
+    "#\n",
+    "# fmodel_gch = FlorisModel(r\"..\\floris\\examples\\inputs\\gauss_vesta.yaml\")\n",
+    "#\n",
+    "# time_series = TimeSeries(\n",
+    "#     wind_directions=np.array([270.0]),\n",
+    "#     wind_speeds=np.array([13.5]),\n",
+    "#     turbulence_intensities=0.06,\n",
+    "# )\n",
+    "#\n",
+    "# fmodel.set(wind_data=time_series)\n",
+    "# cc_start_time = time.time()\n",
+    "# fmodel.run()\n",
+    "# cc_end_time = time.time()\n",
+    "#\n",
+    "#\n",
+    "# fmodel_gch.set(wind_data=time_series)\n",
+    "# gch_start_time = time.time()\n",
+    "# fmodel_gch.run()\n",
+    "# gch_end_time = time.time()\n",
+    "#\n",
+    "#\n",
+    "# gch_farm_power_floris = fmodel_gch.get_farm_power() / 1e6\n",
+    "# gch_turbine_powers_floris = fmodel_gch.get_turbine_powers()\n",
+    "# cc_farm_power_floris = fmodel.get_farm_power() / 1e6\n",
+    "# cc_turbine_powers_floris = fmodel.get_turbine_powers()\n",
     "\n",
     "\n",
     "# Set printing precision\n",
@@ -297,15 +298,15 @@
     "# print(f\"\\nTurbine powers with Cumulative-Curl (W): {cc_powers}\")\n",
     "print(f\"Total farm power (MW): {cc_farm_power:.3f}\")\n",
     "\n",
-    "print(\"\\n---------- FLORIS Results ----------\")\n",
-    "# print(f\"Turbine powers with Gauss-Curl Hybrid (W): {gch_turbine_powers_floris}\")\n",
-    "print(f\"Total farm power (MW): {gch_farm_power_floris[0]:.3f}\")\n",
-    "# print(f\"\\nTurbine powers with Cumulative-Curl (W): {cc_turbine_powers_floris}\")\n",
-    "print(f\"Total farm power (MW): {cc_farm_power_floris[0]:.3f}\")\n",
-    "\n",
-    "print(\"\\n---------- Differences ----------\")\n",
-    "print(f\"Absolute farm power difference (GCH) = {absolute_percentage_difference(gch_farm_power_floris, gch_farm_power)[0]:.2f}%\")\n",
-    "print(f\"Absolute farm power difference (CC) = {absolute_percentage_difference(cc_farm_power_floris, cc_farm_power)[0]:.2f}%\")\n"
+    "# print(\"\\n---------- FLORIS Results ----------\")\n",
+    "# # print(f\"Turbine powers with Gauss-Curl Hybrid (W): {gch_turbine_powers_floris}\")\n",
+    "# print(f\"Total farm power (MW): {gch_farm_power_floris[0]:.3f}\")\n",
+    "# # print(f\"\\nTurbine powers with Cumulative-Curl (W): {cc_turbine_powers_floris}\")\n",
+    "# print(f\"Total farm power (MW): {cc_farm_power_floris[0]:.3f}\")\n",
+    "#\n",
+    "# print(\"\\n---------- Differences ----------\")\n",
+    "# print(f\"Absolute farm power difference (GCH) = {absolute_percentage_difference(gch_farm_power_floris, gch_farm_power)[0]:.2f}%\")\n",
+    "# print(f\"Absolute farm power difference (CC) = {absolute_percentage_difference(cc_farm_power_floris, cc_farm_power)[0]:.2f}%\")\n"
    ],
    "id": "6406a8be9499ac2b",
    "outputs": [
@@ -315,32 +316,24 @@
      "text": [
       "---------- DiffWake JAX Results ----------\n",
       "Total farm power (MW): 1.972\n",
-      "Total farm power (MW): 1.972\n",
-      "\n",
-      "---------- FLORIS Results ----------\n",
-      "Total farm power (MW): 142.443\n",
-      "Total farm power (MW): 97.540\n",
-      "\n",
-      "---------- Differences ----------\n",
-      "Absolute farm power difference (GCH) = 7122.84%\n",
-      "Absolute farm power difference (CC) = 4845.94%\n"
+      "Total farm power (MW): 1.972\n"
      ]
     }
    ],
-   "execution_count": 107
+   "execution_count": 11
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-10T12:42:58.427332800Z",
-     "start_time": "2026-02-10T12:42:58.243107100Z"
+     "end_time": "2026-02-10T14:47:34.063309500Z",
+     "start_time": "2026-02-10T14:47:33.930936400Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "print(\"------------ FLORIS runtimes ------------\")\n",
-    "print(f\"Cumulative-Curl: {cc_end_time - cc_start_time:.4f}s\")\n",
-    "print(f\"Gauss-Curl Hybrid: {gch_end_time - gch_start_time:.4f}s\")\n",
+    "# print(\"------------ FLORIS runtimes ------------\")\n",
+    "# print(f\"Cumulative-Curl: {cc_end_time - cc_start_time:.4f}s\")\n",
+    "# print(f\"Gauss-Curl Hybrid: {gch_end_time - gch_start_time:.4f}s\")\n",
     "\n",
     "print(\"\\n------------ DiffWake runtimes ------------\")\n",
     "print(f\"Cumulative-Curl: {cc_runtime:.4f}s\")\n",
@@ -352,17 +345,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "------------ FLORIS runtimes ------------\n",
-      "Cumulative-Curl: 0.1813s\n",
-      "Gauss-Curl Hybrid: 0.0809s\n",
       "\n",
       "------------ DiffWake runtimes ------------\n",
-      "Cumulative-Curl: 0.0151s\n",
-      "Gauss-Curl Hybrid: 0.0135s\n"
+      "Cumulative-Curl: 4.6562s\n",
+      "Gauss-Curl Hybrid: 0.7230s\n"
      ]
     }
    ],
-   "execution_count": 108
+   "execution_count": 12
   },
   {
    "metadata": {},
@@ -379,8 +369,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-10T12:51:14.473991Z",
-     "start_time": "2026-02-10T12:51:14.193417600Z"
+     "end_time": "2026-02-10T14:51:27.678550400Z",
+     "start_time": "2026-02-10T14:51:27.012361100Z"
     }
    },
    "cell_type": "code",
@@ -390,9 +380,9 @@
     "cc_sim.run(scan=True)\n",
     "cc_lax_end = time.time()\n",
     "\n",
-    "gch_lax_start = time.time()\n",
-    "gch_sim.run(scan=True)\n",
-    "gch_lax_end = time.time()\n",
+    "# gch_lax_start = time.time()\n",
+    "# gch_sim.run(scan=True)\n",
+    "# gch_lax_end = time.time()\n",
     "#\n",
     "# cc_lax_runtime = cc_lax_end - cc_lax_start\n",
     "# gch_lax_runtime = gch_lax_end - gch_lax_start\n",
@@ -406,29 +396,43 @@
     "# print(f\"Gauss-Curl Hybrid: {gch_lax_runtime:.4f}s\")"
    ],
    "id": "2b336c7f48be8a05",
+   "outputs": [],
+   "execution_count": 16
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-10T14:51:29.226417Z",
+     "start_time": "2026-02-10T14:51:29.107788700Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# Runtimes using lax\n",
+    "cc_lax = cc_lax_end - cc_lax_start\n",
+    "cc_lax_farm_power = cc_sim.get_farm_power() / 1e6\n",
+    "print(\"\\n------------ DiffWake powers (jax.lax) ------------\")\n",
+    "print(f\"Total farm power (MW): {cc_lax_farm_power:.3f}\")\n",
+    "print(\"\\n------------ DiffWake runtimes (jax.lax) ------------\")\n",
+    "print(f\"Cumulative-Curl: {cc_lax:.4f}s\")\n",
+    "# print(f\"Gauss-Curl Hybrid: {gch_runtime:.4f}s\")"
+   ],
+   "id": "5ab5766ff9354719",
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "Exception raised while checking equality of metadata fields of pytree. Make sure that metadata fields are hashable and have simple equality semantics. (Note: arrays cannot be passed as metadata fields!)",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
-      "\u001B[31mValueError\u001B[39m                                Traceback (most recent call last)",
-      "\u001B[36mFile \u001B[39m\u001B[32mE:\\Aeronautics\\FYP\\.venv\\Lib\\site-packages\\jax\\_src\\array.py:294\u001B[39m, in \u001B[36mArrayImpl.__bool__\u001B[39m\u001B[34m(self)\u001B[39m\n\u001B[32m    293\u001B[39m \u001B[38;5;28;01mdef\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34m__bool__\u001B[39m(\u001B[38;5;28mself\u001B[39m):\n\u001B[32m--> \u001B[39m\u001B[32m294\u001B[39m   \u001B[43mcore\u001B[49m\u001B[43m.\u001B[49m\u001B[43mcheck_bool_conversion\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[43m)\u001B[49m\n\u001B[32m    295\u001B[39m   \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28mbool\u001B[39m(\u001B[38;5;28mself\u001B[39m._value)\n",
-      "\u001B[36mFile \u001B[39m\u001B[32mE:\\Aeronautics\\FYP\\.venv\\Lib\\site-packages\\jax\\_src\\core.py:882\u001B[39m, in \u001B[36mcheck_bool_conversion\u001B[39m\u001B[34m(arr)\u001B[39m\n\u001B[32m    881\u001B[39m \u001B[38;5;28;01mif\u001B[39;00m arr.size > \u001B[32m1\u001B[39m:\n\u001B[32m--> \u001B[39m\u001B[32m882\u001B[39m   \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mValueError\u001B[39;00m(\u001B[33m\"\u001B[39m\u001B[33mThe truth value of an array with more than one element\u001B[39m\u001B[33m\"\u001B[39m\n\u001B[32m    883\u001B[39m                    \u001B[33m\"\u001B[39m\u001B[33m is ambiguous. Use a.any() or a.all()\u001B[39m\u001B[33m\"\u001B[39m)\n",
-      "\u001B[31mValueError\u001B[39m: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001B[31mValueError\u001B[39m                                Traceback (most recent call last)",
-      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[124]\u001B[39m\u001B[32m, line 3\u001B[39m\n\u001B[32m      1\u001B[39m \u001B[38;5;66;03m# Run using lax_fori\u001B[39;00m\n\u001B[32m      2\u001B[39m cc_lax_start = time.time()\n\u001B[32m----> \u001B[39m\u001B[32m3\u001B[39m \u001B[43mcc_sim\u001B[49m\u001B[43m.\u001B[49m\u001B[43mrun\u001B[49m\u001B[43m(\u001B[49m\u001B[43mscan\u001B[49m\u001B[43m=\u001B[49m\u001B[38;5;28;43;01mTrue\u001B[39;49;00m\u001B[43m)\u001B[49m\n\u001B[32m      4\u001B[39m cc_lax_end = time.time()\n\u001B[32m      6\u001B[39m gch_lax_start = time.time()\n",
-      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[105]\u001B[39m\u001B[32m, line 72\u001B[39m, in \u001B[36mDiffWakeSimulation.run\u001B[39m\u001B[34m(self, scan)\u001B[39m\n\u001B[32m     69\u001B[39m time_start = time.time()\n\u001B[32m     70\u001B[39m \u001B[38;5;28;01mif\u001B[39;00m scan:\n\u001B[32m     71\u001B[39m     \u001B[38;5;66;03m# Use lax\u001B[39;00m\n\u001B[32m---> \u001B[39m\u001B[32m72\u001B[39m     \u001B[38;5;28mself\u001B[39m.result = \u001B[43msimulate\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[43m.\u001B[49m\u001B[43mstate\u001B[49m\u001B[43m)\u001B[49m\n\u001B[32m     73\u001B[39m \u001B[38;5;28;01melse\u001B[39;00m:\n\u001B[32m     74\u001B[39m     \u001B[38;5;28mself\u001B[39m.result = simulate_simp(\u001B[38;5;28mself\u001B[39m.state)\n",
-      "\u001B[36mFile \u001B[39m\u001B[32mE:\\Aeronautics\\fyp\\DiffWake\\diffwake\\diffwake_jax\\sim_agnostic.py:30\u001B[39m, in \u001B[36msimulate\u001B[39m\u001B[34m(state)\u001B[39m\n\u001B[32m     26\u001B[39m init    = init_dynamic_state(state.grid, state.flow)\n\u001B[32m     27\u001B[39m T_int  = \u001B[38;5;28mint\u001B[39m(params.T)\n\u001B[32m---> \u001B[39m\u001B[32m30\u001B[39m result_state = \u001B[43m_simulate_scan\u001B[49m\u001B[43m(\u001B[49m\u001B[43mT_int\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m     31\u001B[39m \u001B[43m                         \u001B[49m\u001B[43mparams\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\n\u001B[32m     32\u001B[39m \u001B[43m                         \u001B[49m\u001B[43mthrust_fn\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m     33\u001B[39m \u001B[43m                         \u001B[49m\u001B[43maxial_fn\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m     34\u001B[39m \u001B[43m                         \u001B[49m\u001B[43mstate\u001B[49m\u001B[43m.\u001B[49m\u001B[43mwake\u001B[49m\u001B[43m.\u001B[49m\u001B[43mvelocity_model\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m     35\u001B[39m \u001B[43m                         \u001B[49m\u001B[43mstate\u001B[49m\u001B[43m.\u001B[49m\u001B[43mwake\u001B[49m\u001B[43m.\u001B[49m\u001B[43mmodel_strings\u001B[49m\u001B[43m[\u001B[49m\u001B[33;43m'\u001B[39;49m\u001B[33;43mvelocity_model\u001B[39;49m\u001B[33;43m'\u001B[39;49m\u001B[43m]\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m     36\u001B[39m \u001B[43m                         \u001B[49m\u001B[43mstate\u001B[49m\u001B[43m.\u001B[49m\u001B[43mwake\u001B[49m\u001B[43m.\u001B[49m\u001B[43mdeflection_model\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m     37\u001B[39m \u001B[43m                         \u001B[49m\u001B[43mstate\u001B[49m\u001B[43m.\u001B[49m\u001B[43mwake\u001B[49m\u001B[43m.\u001B[49m\u001B[43mturbulence_model\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m     38\u001B[39m \u001B[43m                         \u001B[49m\u001B[43mstate\u001B[49m\u001B[43m.\u001B[49m\u001B[43mwake\u001B[49m\u001B[43m.\u001B[49m\u001B[43mcombination_model\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m     39\u001B[39m \u001B[43m                         \u001B[49m\u001B[43myaw_angles\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m     40\u001B[39m \u001B[43m                         \u001B[49m\u001B[43mtilt_angles\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m     41\u001B[39m \u001B[43m                         \u001B[49m\u001B[43mconst\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\n\u001B[32m     42\u001B[39m \u001B[43m                         \u001B[49m\u001B[43minit\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m     43\u001B[39m \u001B[43m                         \u001B[49m\u001B[43menable_secondary_steering\u001B[49m\u001B[43m=\u001B[49m\u001B[38;5;28;43mbool\u001B[39;49m\u001B[43m(\u001B[49m\u001B[43menable_secondary_steering\u001B[49m\u001B[43m)\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m     44\u001B[39m \u001B[43m                         \u001B[49m\u001B[43menable_transverse_velocities\u001B[49m\u001B[43m=\u001B[49m\u001B[38;5;28;43mbool\u001B[39;49m\u001B[43m(\u001B[49m\u001B[43menable_transverse_velocities\u001B[49m\u001B[43m)\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m     45\u001B[39m \u001B[43m                         \u001B[49m\u001B[43menable_yaw_added_recovery\u001B[49m\u001B[43m=\u001B[49m\u001B[38;5;28;43mbool\u001B[39;49m\u001B[43m(\u001B[49m\u001B[43menable_yaw_added_recovery\u001B[49m\u001B[43m)\u001B[49m\u001B[43m)\u001B[49m\n\u001B[32m     46\u001B[39m \u001B[38;5;28;01mreturn\u001B[39;00m to_result(result_state)\n",
-      "    \u001B[31m[... skipping hidden 2 frame]\u001B[39m\n",
-      "\u001B[36mFile \u001B[39m\u001B[32mE:\\Aeronautics\\FYP\\.venv\\Lib\\site-packages\\jax\\_src\\pjit.py:497\u001B[39m, in \u001B[36m_trace_for_jit\u001B[39m\u001B[34m(fun, ji, args, kwargs)\u001B[39m\n\u001B[32m    492\u001B[39m   \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mValueError\u001B[39;00m(\n\u001B[32m    493\u001B[39m       \u001B[33m\"\u001B[39m\u001B[33mMesh context manager should not be used with jit when backend or \u001B[39m\u001B[33m\"\u001B[39m\n\u001B[32m    494\u001B[39m       \u001B[33m\"\u001B[39m\u001B[33mdevice is also specified as an argument to jit.\u001B[39m\u001B[33m\"\u001B[39m)\n\u001B[32m    496\u001B[39m \u001B[38;5;28;01mif\u001B[39;00m (ji.donate_argnums \u001B[38;5;129;01mor\u001B[39;00m ji.donate_argnames) \u001B[38;5;129;01mand\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m config.debug_nans.value:\n\u001B[32m--> \u001B[39m\u001B[32m497\u001B[39m   donated_invars = \u001B[43mdonation_vector\u001B[49m\u001B[43m(\u001B[49m\u001B[43mji\u001B[49m\u001B[43m.\u001B[49m\u001B[43mdonate_argnums\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mji\u001B[49m\u001B[43m.\u001B[49m\u001B[43mdonate_argnames\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mavals\u001B[49m\u001B[43m.\u001B[49m\u001B[43mtree\u001B[49m\u001B[43m)\u001B[49m\n\u001B[32m    498\u001B[39m \u001B[38;5;28;01melse\u001B[39;00m:\n\u001B[32m    499\u001B[39m   donated_invars = (\u001B[38;5;28;01mFalse\u001B[39;00m,) * \u001B[38;5;28mlen\u001B[39m(avals)\n",
-      "\u001B[31mValueError\u001B[39m: Exception raised while checking equality of metadata fields of pytree. Make sure that metadata fields are hashable and have simple equality semantics. (Note: arrays cannot be passed as metadata fields!)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "------------ DiffWake powers (jax.lax) ------------\n",
+      "Total farm power (MW): 0.000\n",
+      "\n",
+      "------------ DiffWake runtimes (jax.lax) ------------\n",
+      "Cumulative-Curl: 0.5586s\n"
      ]
     }
    ],
-   "execution_count": 124
+   "execution_count": 17
   },
   {
    "metadata": {},
