--- a/simulation.ipynb
+++ b/simulation.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-10T14:20:53.597474300Z",
-     "start_time": "2026-02-10T14:20:53.144549100Z"
+     "end_time": "2026-02-10T15:11:39.752829900Z",
+     "start_time": "2026-02-10T15:11:39.353569300Z"
     }
    },
    "cell_type": "code",
@@ -14,15 +14,15 @@
    ],
    "id": "6837f2b02e8dce31",
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 2
   },
   {
    "cell_type": "code",
    "id": "0f40c543",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-10T14:51:23.571431500Z",
-     "start_time": "2026-02-10T14:51:23.423750100Z"
+     "end_time": "2026-02-10T15:11:51.823140700Z",
+     "start_time": "2026-02-10T15:11:51.679866Z"
     }
    },
    "source": [
@@ -79,13 +79,13 @@
     "    return x\n"
    ],
    "outputs": [],
-   "execution_count": 15
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-10T14:21:05.836729Z",
-     "start_time": "2026-02-10T14:21:05.684845400Z"
+     "end_time": "2026-02-10T15:12:03.572121800Z",
+     "start_time": "2026-02-10T15:12:03.446292800Z"
     }
    },
    "cell_type": "code",
@@ -187,13 +187,13 @@
    ],
    "id": "65f79b960202888e",
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-10T14:21:15.154946500Z",
-     "start_time": "2026-02-10T14:21:07.875228900Z"
+     "end_time": "2026-02-10T15:12:24.290601800Z",
+     "start_time": "2026-02-10T15:12:10.037392500Z"
     }
    },
    "cell_type": "code",
@@ -204,8 +204,9 @@
     "gen_file = \"vestas_v802MW.yaml\"\n",
     "\n",
     "# Cartesian coordinates in metres\n",
-    "layout_x = jnp.array([0.0, ])\n",
-    "layout_y = jnp.array([0.0, ])\n",
+    "override_layout = False\n",
+    "layout_x = jnp.array([0.0, 500.0, 1000.0])\n",
+    "layout_y = jnp.array([0.0, 500.0, 1000.0])\n",
     "\n",
     "# Inflow speed in m/s\n",
     "wind_speed = jnp.array([13.5])\n",
@@ -214,24 +215,29 @@
     "\n",
     "# Load configurations for each wake model\n",
     "cc_config = DiffWakeConfig(data_dir, cc_farm, gen_file)\n",
-    "# cc_params = DiffWakeParams(wind_speed=wind_speed,\n",
-    "#                            wind_directions=wind_dir,\n",
-    "#                            turbulence_intensities=ti)\n",
-    "cc_params = DiffWakeParams(layout_x=layout_x,\n",
-    "                           layout_y=layout_y,\n",
-    "                           wind_speed=wind_speed,\n",
-    "                           wind_directions=wind_dir,\n",
-    "                           turbulence_intensities=ti)\n",
-    "\n",
     "gch_config = DiffWakeConfig(data_dir, gch_farm, gen_file)\n",
-    "# gch_params = DiffWakeParams(wind_speed=wind_speed,\n",
-    "#                             wind_directions=wind_dir,\n",
-    "#                             turbulence_intensities=ti)\n",
-    "gch_params = DiffWakeParams(layout_x=layout_x,\n",
-    "                           layout_y=layout_y,\n",
-    "                           wind_speed=wind_speed,\n",
-    "                           wind_directions=wind_dir,\n",
-    "                           turbulence_intensities=ti)\n",
+    "\n",
+    "\n",
+    "if override_layout == False:\n",
+    "    cc_params = DiffWakeParams(wind_speed=wind_speed,\n",
+    "                               wind_directions=wind_dir,\n",
+    "                               turbulence_intensities=ti)\n",
+    "    gch_params = DiffWakeParams(wind_speed=wind_speed,\n",
+    "                            wind_directions=wind_dir,\n",
+    "                            turbulence_intensities=ti)\n",
+    "\n",
+    "else:\n",
+    "    cc_params = DiffWakeParams(layout_x=layout_x,\n",
+    "                               layout_y=layout_y,\n",
+    "                               wind_speed=wind_speed,\n",
+    "                               wind_directions=wind_dir,\n",
+    "                               turbulence_intensities=ti)\n",
+    "    gch_params = DiffWakeParams(layout_x=layout_x,\n",
+    "                               layout_y=layout_y,\n",
+    "                               wind_speed=wind_speed,\n",
+    "                               wind_directions=wind_dir,\n",
+    "                               turbulence_intensities=ti)\n",
+    "\n",
     "\n",
     "# Prepare simulations\n",
     "cc_sim = DiffWakeSimulation(cc_config, cc_params)\n",
@@ -244,7 +250,7 @@
    ],
    "id": "476bf48af3f5bfde",
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 6
   },
   {
    "metadata": {},
@@ -357,12 +363,19 @@
   {
    "metadata": {},
    "cell_type": "markdown",
+   "source": "## jax.lax",
+   "id": "31b756f5fc53fe1e"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
    "source": [
     "Because the problem is relatively simple, we will now compare multi-direction and speed simulations to see if JAX provides an improvement.\n",
     "\n",
     "DiffWake having a longer runtime is expected due to the relatively simple nature of the problem; the overheads are non-trivial.\n",
     "\n",
-    "Let's try using lax_fori to see if we can reduce the runtime.\n"
+    "There are options like lax.scan and lax.fori_loop but at the moment these are not so useful for simply running a simulation.\n",
+    "We will focus on writing optimisation loops, par_runner.py and use ideas from layout_runner.py.\n"
    ],
    "id": "d722bb3d7cab70ae"
   },
@@ -380,20 +393,20 @@
     "cc_sim.run(scan=True)\n",
     "cc_lax_end = time.time()\n",
     "\n",
-    "# gch_lax_start = time.time()\n",
-    "# gch_sim.run(scan=True)\n",
-    "# gch_lax_end = time.time()\n",
-    "#\n",
-    "# cc_lax_runtime = cc_lax_end - cc_lax_start\n",
-    "# gch_lax_runtime = gch_lax_end - gch_lax_start\n",
-    "#\n",
-    "# print(\"\\n------------ DiffWake runtimes (simple for loop) ------------\")\n",
-    "# print(f\"Cumulative-Curl: {cc_runtime:.4f}s\")\n",
-    "# print(f\"Gauss-Curl Hybrid: {gch_runtime:.4f}s\")\n",
-    "#\n",
-    "# print(\"\\n------------ DiffWake runtimes (lax) ------------\")\n",
-    "# print(f\"Cumulative-Curl: {cc_lax_runtime:.4f}s\")\n",
-    "# print(f\"Gauss-Curl Hybrid: {gch_lax_runtime:.4f}s\")"
+    "gch_lax_start = time.time()\n",
+    "gch_sim.run(scan=True)\n",
+    "gch_lax_end = time.time()\n",
+    "\n",
+    "cc_lax_runtime = cc_lax_end - cc_lax_start\n",
+    "gch_lax_runtime = gch_lax_end - gch_lax_start\n",
+    "\n",
+    "print(\"\\n------------ DiffWake runtimes (simple for loop) ------------\")\n",
+    "print(f\"Cumulative-Curl: {cc_runtime:.4f}s\")\n",
+    "print(f\"Gauss-Curl Hybrid: {gch_runtime:.4f}s\")\n",
+    "\n",
+    "print(\"\\n------------ DiffWake runtimes (lax) ------------\")\n",
+    "print(f\"Cumulative-Curl: {cc_lax_runtime:.4f}s\")\n",
+    "print(f\"Gauss-Curl Hybrid: {gch_lax_runtime:.4f}s\")"
    ],
    "id": "2b336c7f48be8a05",
    "outputs": [],
@@ -410,12 +423,16 @@
    "source": [
     "# Runtimes using lax\n",
     "cc_lax = cc_lax_end - cc_lax_start\n",
+    "gch_lax = gch_lax_end - gch_lax_start\n",
     "cc_lax_farm_power = cc_sim.get_farm_power() / 1e6\n",
+    "gch_lax_farm_power = gch_sim.get_farm_power() / 1e6\n",
+    "\n",
     "print(\"\\n------------ DiffWake powers (jax.lax) ------------\")\n",
     "print(f\"Total farm power (MW): {cc_lax_farm_power:.3f}\")\n",
+    "print(f\"Total farm power (MW): {gch_lax_farm_power:.3f}\")\n",
     "print(\"\\n------------ DiffWake runtimes (jax.lax) ------------\")\n",
     "print(f\"Cumulative-Curl: {cc_lax:.4f}s\")\n",
-    "# print(f\"Gauss-Curl Hybrid: {gch_runtime:.4f}s\")"
+    "print(f\"Gauss-Curl Hybrid: {gch_runtime:.4f}s\")"
    ],
    "id": "5ab5766ff9354719",
    "outputs": [
@@ -437,7 +454,12 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "## Loop through N turbines using JAX",
+   "source": [
+    "## FLORIS vs DiffWake runtime tests\n",
+    "Let's run through GCH and CC simulations using FLORIS and DiffWake to see the performance improvements.\n",
+    "The JAX-based implementations of GCH and CC should both yield linear runtimes whereas the FLORIS implementation of CC should lead to a runtime that varies quadratically with the number of turbines N (due to the nested loop). The FLORIS GCH implementation should be linear, since it only loops through the turbines once.\n",
+    "### Loop through 360 unique wind directions and 5 unique wind speeds using FLORIS and DiffWake"
+   ],
    "id": "95fef3f4e3c63b67"
   },
   {
